--- a/contacts.html
+++ b/contacts.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"/>
-    <title>PROJEKTZ</title>
+    <title>CV</title>
 </head>
 <body class="black">
 <!--
@@ -29,12 +29,12 @@
      <div class="showslide6">
    
 
-      
-     <img class="kar" src="/showreel/CV1.png">
+     <img class="kar" src="/showreel/cv_0.png">
+     <img class="kar" src="/showreel/cv_1.png">
      <img class="kar" src="/showreel/CV2.png">
      <a href="index.html">
 
-     <model-viewer class="modddd" camera-controls exposure="1" loading="eager" auto-rotate src="/showreel/heygurl1.glb" width: 500px;
+     <model-viewer class="modddd" exposure="1" loading="eager" auto-rotate src="/showreel/heygurl1.glb" width: 500px;
         height: 900px;>
        </model-viewer>
     </a>
